fixed profile spacing

--- a/app/assets/stylesheets/chapters.css.scss
+++ b/app/assets/stylesheets/chapters.css.scss
@@ -72,7 +72,7 @@
 .single-profile{
   @include span-columns(8 of 8);
   @include omega();
-  margin-bottom: 2.5em;
+  margin-bottom: 3.5em;
 
   .profile-img{
     @include span-columns(3 of 8);
@@ -82,13 +82,11 @@
       margin-top: 19px;
       box-shadow: .025rem .025rem .5rem #bdbec0;
       border-radius: 5px;
-      margin-bottom: 2.5em;
     }
   }
   .profile-content{
     @include span-columns(5 of 8);
     @include omega();
-    margin-bottom: 2.5em;
     h3{
       @extend %dashed-border;
     }
